--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
           <div class="dark-mode">
-            <p class="dark-mode-title">Dark Mode</p>
+            <p class="dark-mode-title" id="app" v-model="">{{ message }}</p>
             <input type="checkbox" class="checkbox" id="checkbox">
             <label class="switch" for="checkbox" arial-label="disabled">
             </label>
@@ -199,6 +199,7 @@
   </section>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
   <script src="main.js"></script>
 </body>
